inceptionOfThings/p2/confs/app-three.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app-three
  name: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-three
    spec:
      containers:
      - image: paulbouwer/hello-kubernetes:1.10
        name: hello-kubernetes
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app-three
  name: app-three
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-three
  type: ClusterIP
